Minor fixes to report

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -25,7 +25,7 @@ Team Estepona - Abstract Abstract Machines}
 \maketitle
 
 \section{Abstract}
-We implemented an abstract interpreter for a subset of source. By approximating program states, our abstract interpreter always terminates and can be used to analyse program behaviour and allow for code optimisation. Our interpreter also allows for visualisation of the abstract state-space for analysis.
+We implemented an abstract interpreter for a subset of Source. By approximating program states, our abstract interpreter always terminates and can be used to analyse program behaviour and allow for code optimisation. Our interpreter also allows for visualisation of the abstract state-space for analysis.
 
 \section{Introduction}
 The objective of static program analysis is to determine the behaviour of a program without running it. This includes determining whether the program terminates, whether optimisations can be applied, and what states are reachable during program execution.
@@ -36,7 +36,7 @@ A key difficulty is that a virtual machine executing a program might require an 
 
 For example, if the concrete machine transitions from state $A$ to state $B$, then the abstract machine must transition from some abstract state $A^{\prime}$ to some abstract state $B^{\prime}$, where $A^{\prime}$ and $B^{\prime}$ are the abstract states representing $A$ and $B$. If the abstract machine always terminates, then so must the concrete machine.
 
-We applied this approach to convert the Source virtual machine into an abstract interpreter which supports higher-order functions and conditionals. The interpreter provably terminates, returning a graph of abstract states reached that can be visualised by the user and potentially used to derive complier optimisations.
+We applied this approach to convert the Source virtual machine into an abstract interpreter which supports higher-order functions and conditionals. The interpreter provably terminates, returning a graph of abstract states reached that can be visualised by the user and potentially used to derive compiler optimisations.
 
 \section{Implementation}
 \subsection{Overview}
@@ -60,7 +60,7 @@ where $v \in STORE(ENV(name))$
 $$\infer{s(PC) = ASSIGN\ name}{
   (PC,v.OS,ENV,STORE,KONT,TIME,C) \rightarrow \\
   (PC+1,OS,ENV,STORE[ENV(name) \leftarrow v],KONT,TIME,C)}$$
-where $STORE[addr \leftarrow v]$ denotes adding the value $v$ to the set of values at the address $addr$ in the $STORE$
+where $STORE[addr \leftarrow v]$ denotes adding the value $v$ to the set of values at the address $addr$ in $STORE$
 
 \subsection{Functions}
 \subsubsection{LDF}
@@ -77,7 +77,7 @@ $$closure=(funcAddr,envAddr,numToExtend)$$
 Note that the environment address is the $TIME$ concatenated with the function address concatenated with the string constant $``env''$. The use of the function address and string constant ensures that the set of values stored at this address are all environnments which are compatible with this function.
 
 \subsubsection{CALL}
-The $CALL$ instruction is more complex. It receives the number of parameters as input, and pops the the parameters and closure from the operand stack. Afterwards, it extends the function environment in the closure, saves the current state as a continuation, and transitions to the new function.
+The $CALL$ instruction is more complex. It receives the number of parameters as input and pops the the parameters and closure from the operand stack. Afterwards, it extends the function environment in the closure, saves the current state as a continuation, and transitions to the new function.
 
 $$\infer{s(PC) = CALL\ \ n}{
     (PC,OS,ENV,STORE,KONT,TIME,C) \rightarrow \\
@@ -105,7 +105,7 @@ $$TIME' = truncate(TIME.PC)$$
 
 Note that the names added to the environment are in the range $s+1$ to $s+numToExtend$ where $s$ is the original size of the environment. Also note this rule can be applied with $funcEnv$ being any of the environments stored in the store under that particular address. The addresses are allocated by the $alloc$ function that takes in the $TIME$ and counter $C$ and returns the address $TIME.``v''.C$. The string constant $``v''$ denotes that these addreses are meant to store values.
 
-The $CALL$ instruction also stores the current $ENV$, $OS$ and other parameters in the state as part of a continuation object. $KONT'$ is the address pointing to this object and the format of the address includes the current $PC$ which ensures that all possible continuations stored in this address returns to this $PC$. In other words, this ensures that no two continuations returning to different places exists in the same address in the store.
+The $CALL$ instruction also stores the current $ENV$, $OS$ and other parameters in the state as part of a continuation object. $KONT'$ is the address pointing to this object and the format of the address includes the current $PC$ which ensures that all possible continuations stored in this address return to this $PC$. In other words, this ensures that no two continuations returning to different places exist in the same address in the store.
 
 Finally the value of $TIME'$ is created by appending the current $PC$ to the current $TIME$ then trucating it if necessary to a predefined maximum length of $MAX\_TIME$. This is necessary to ensure that the abstract interpreter terminates, which we will prove in the analysis section.
 
@@ -122,7 +122,7 @@ $$OS' \in STORE(osAddr)$$
 $$ENV' \in STORE(envAddr)$$
 
 \subsection{Bounding of values}
-To ensure that states are finite, values of numbers are bounded by the constants $MIN\_NUM$ and $MAX\_NUM$, numbers which exceed these bounds during runtime will be replaced with the constant $``unum''$, representing an unknown number. Arithmetic operations involving $``unum''$ will result in $``unum''$. Evaluating expressions such as $``unum'' > 0$ will result in the constant $``ubool''$. The conditional instruction $JOF$ can non-deterministically jump to either address when applied to $``ubool''$.
+To ensure that states are finite, values of numbers are bounded by the constants $MIN\_NUM$ and $MAX\_NUM$, numbers that exceed these bounds during runtime will be replaced with the constant $``unum''$, representing an unknown number. Arithmetic operations involving $``unum''$ will result in $``unum''$. Evaluating expressions such as $``unum'' > 0$ will result in the constant $``ubool''$. The conditional instruction $JOF$ can non-deterministically jump to either address when applied to $``ubool''$.
 
 \subsection{Execution}
 The abstract interpreter receives a Source program as input. It then compiles it into Source virtual machine code. Starting with the state:
@@ -139,10 +139,10 @@ There are two important differences between the abstract states and the concrete
 
 Firstly, the abstract machine deals with bounded numbers, using the constants ``unum'' and ``ubool'' to represent any number and boolean. Numbers and booleans in the concrete state may be replaced by these unknown values in the abstract. This does not compromise soundness.
 
-Secondly, each address in the abstract machine points to a set of values instead a single value. Another way of seeing this is that values in the concrete store may have to ``share'' an address in the abstract store. For all semantic rules of the concrete machine, the abstract version of the rule accounts for all possible values when dereferencing the store. Hence all of the state transitions in the concrete machine must be represented by a state transistion in the abstract. Hence soundness is preserved here as well.
+Secondly, each address in the abstract machine points to a set of values instead of a single value. Another way of seeing this is that values in the concrete store may have to ``share'' an address in the abstract store. For all semantic rules of the concrete machine, the abstract version of the rule accounts for all possible values when dereferencing the store. Hence all of the state transitions in the concrete machine must be represented by a state transistion in the abstract. Hence soundness is preserved here as well.
 
 \subsection{Decidability}
-To show decidability, we show that the number of states is finite. 
+To show decidability of reachability of states, we show that the number of states is finite. 
 \begin{itemize}
   \item $PC$ is bounded by the size of the compiled program, which is finite.
         
@@ -154,7 +154,7 @@ To show decidability, we show that the number of states is finite.
         
   \item Closures include the $PC$ of the function, the address of its environment and the number of local variables and parameters, all of which are finite.
         
-  \item $OS$ is of finite size (as guaranteed by compiler), storing values which includes bounded numbers, booleans, and closures. Hence number of possible $OS$ is finite.
+  \item $OS$ is of finite size (as guaranteed by compiler), storing values which include bounded numbers, booleans, and closures. Hence number of possible $OS$ is finite.
         
   \item $ENV$ is finite as names and and addresses are finite.
         
@@ -200,7 +200,7 @@ Applying our abstract interpreter results in a finite number of states ending wi
   \includegraphics[scale=0.7]{simple_graph.png}
 \end{center}
 The second last state from the bottom is shown here:
-\begin{small}
+\begin{footnotesize}
   \begin{verbatim}
 PC:	  21
 TIME:	0.5.18
@@ -223,16 +223,16 @@ STORE:
  [25,"0.5.18.23.kont.os","0.5.18.23.kont.env","0.5.18.kont","0.5.18",0] ||
  [25,"0.5.18.23.kont.os","0.5.18.23.kont.env","0.5.18.23.kont","0.5.18",0]
 \end{verbatim}
-\end{small}
-The only difference between the last state and second last state except that the $PC$ of the last state is 23 and the $OS$ has a single entry, which is the closure \verb|[21,0.5.21.env,0]|. 
+\end{footnotesize}
+The only difference between the last state and second last state is that the $PC$ of the last state is 23 and the $OS$ has a single entry, which is the closure \verb|[21,0.5.21.env,0]|. 
 
 Observe that the address \verb|0.5.18.23.kont| in the store points a set of 2 continuations. When the $CALL$ instruction executes, it creates a continuation to store the current state. This continuation would be stored at the address \verb|0.5.18.23.kont|, but as the store already contains the same exact continuation at that address, the store is left unchanged. This explains why the states loop.
 
-This looping occurs only because the $TIME$ is truncated. If $TIME$ is not truncated, each call would cause the length of $TIME$ to increase, hence there would not be a loop. Furthermore, if $TIME$ is not truncated, each continuation would have its own unique address.
+This looping occurs only because $TIME$ is truncated. If $TIME$ is not truncated, each call would cause the length of $TIME$ to increase, hence there would not be a loop. Furthermore, if $TIME$ is not truncated, each continuation would have its own unique address.
 
 Increasing the value of $MAX\_TIME$ in this example would only lead to a longer chain of states being explored before the same loop is reached.
 
-From the fact that the abstract interpreter loops and never reaches the $DONE$ instruction, we can conclude that the concrete machine will never reach the $DONE$ instruction as well, this follows from the soundness of our interpreter and shows that the concrete machine will never terminate on this program.
+From the fact that the abstract interpreter loops and never reaches the $DONE$ instruction, we can conclude that the concrete machine will never reach the $DONE$ instruction as well, this follows from the soundness of our interpreter and shows that the concrete machine will never terminate for this program.
 
 \subsection{More Complex Example}
 We now demonstrate our interpreter on a more complex program:
@@ -246,7 +246,7 @@ Setting $MAX\_TIME$ to 3 and $MAX\_NUM$ to 10 results in the following states:
 \begin{center}
   \includegraphics[scale=0.7]{complex_graph.png}
 \end{center}
-The interpreter terminates and the branches represent the $LD$ instruction dealing with multiple possible values of x in the store (8, 9, 10 and ``unum'').
+The branches represent the $LD$ instruction dealing with multiple possible values of x in the store (8, 9, 10 and ``unum'').
 
 \section{Visualisation}
 We have implemented a frontend for the interpreter that allows users to enter programs and explore states via a graphical interface.
@@ -256,12 +256,12 @@ We have implemented a frontend for the interpreter that allows users to enter pr
 \section{Optimisations}
 As an extension, we added automated tracking of function calls, parameters and return values. This can aid with code optimisation as functions that are always called with the same parameters can have those parameters in the function body substituted with constants. Functions that always return the same value can have their calls replaced with constants (assuming no side effects).
 
-The soundness of the abstract interpreter ensures that these optimisations do not change program behaviour. If a value is received or returned by a function in the concrete, then it would be represented by some abstract state. Although the converse is not true and the abstract interpreter may show values that can never be reached by the concrete machine.
+The soundness of the abstract interpreter ensures that these optimisations do not change program behaviour. This is as all values received or returned by a function in the concrete are represented by some abstract state. Although the converse is not true and the abstract interpreter may show values that can never be reached by the concrete machine.
 
 % Can add examples here
 
 \section{Conclusion}
-We implemented an abstract interpreter for Source supporting higher-order functions and conditionals. We proved the soundness and decidability of our interpreter and showed how it can be used to analyse programs and apply optimisations. We have also implemented a graphical interface supporting visualisation of the state space. Future extensions might include supporting more features of Source and tracking the bound variables of functions to enable further optimisations such as function inlining. 
+We implemented an abstract interpreter for Source supporting higher-order functions and conditionals. We proved the soundness and decidability of our interpreter and showed how it can be used to analyse programs and apply optimisations. We have also implemented a graphical interface supporting visualisation of the state-space. Future extensions might include supporting more features of Source and tracking the bound variables of functions to enable further optimisations such as function inlining. 
 
 \bibliography{refs}
 \bibliographystyle{plain}
