--- a/docs/report.tex
+++ b/docs/report.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{mathpartir}
 \usepackage{graphicx}
+\usepackage{hyperref}
 \graphicspath{ {./images/} }
 
 \begin{filecontents}{refs.bib}
@@ -25,7 +26,7 @@ Team Estepona - Abstract Abstract Machines}
 \maketitle
 
 \section{Abstract}
-We implemented an abstract interpreter for a subset of Source. By approximating program states, our abstract interpreter always terminates and can be used to analyse program behaviour and allow for code optimisation. Our interpreter also allows for visualisation of the abstract state-space for analysis.
+We implemented an abstract interpreter for a subset of Source. By approximating program states, our abstract interpreter always terminates and can be used to analyse program behaviour and allow for code optimisation. Our interpreter also allows for visualisation of the abstract state-space for analysis. The source code can be found at \url{https://github.com/jing-xuan/abstractabstractabstract/releases/tag/v1.0.0}
 
 \section{Introduction}
 The objective of static program analysis is to determine the behaviour of a program without running it. This includes determining whether the program terminates, whether optimisations can be applied, and what states are reachable during program execution.
